--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>BSPQ-03_client</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+		<maven.compiler.release>8</maven.compiler.release>
+		<doxygen.config.file>${basedir}/src/main/resources/Doxyfile</doxygen.config.file>
+		<jersey.version>2.35</jersey.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -140,6 +146,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>com.soebes.maven.plugins</groupId>
+				<artifactId>doxygen-maven-plugin</artifactId>
+				<version>1.1.0</version>
+				<configuration>
+					<configurationFile>${doxygen.config.file}</configurationFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
@@ -205,9 +219,4 @@
 			</build>
 		</profile>
 	</profiles>
-	<properties>
-		<jersey.version>2.35</jersey.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.release>8</maven.compiler.release>
-	</properties>
 </project>
