--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<version>2.3.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.github.javatlacati</groupId>
+    		<artifactId>contiperf</artifactId>
+    		<version>2.4.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>simple-jersey-webapp</finalName>
@@ -159,6 +164,16 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.datanucleus</groupId>
+				<artifactId>datanucleus-maven-plugin</artifactId>
+				<version>6.0.0-release</version>
+				<configuration>
+					<api>JDO</api>
+					<verbose>true</verbose>
+					<props>${config.files.dir}/datanucleus.properties</props>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>com.soebes.maven.plugins</groupId>
 				<artifactId>doxygen-maven-plugin</artifactId>
 				<version>1.1.0</version>
@@ -227,6 +242,18 @@
 							<mainClass>com.deustotickets.app.App</mainClass>
 						</configuration>
 					</plugin>
+					<plugin>
+            			<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-surefire-plugin</artifactId>
+            			<version>3.0.0-M6</version>
+            			<configuration>
+               				<includes>
+                    			<include>**/*Test.java</include>
+                    			<include>**/Test*.java</include>
+                    			<include>**/*Tests.java</include>
+                			</includes>
+            			</configuration>
+        			</plugin>
 				</plugins>
 			</build>
 		</profile>
